# mate-character-map

./: ChangeLog  ChangeLog.README  ChangeLog.pre-2-23  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  gtkrc.win32  mate-charmap.desktop.in.in  mcharmap.nsi.in  mcharmap.pc.in  mcharmap.schemas.in  mcharmap.spec.in
bindings/: Makefile.in
bindings/python/: Makefile.am  Makefile.in  mcharmap.defs  mcharmap.override  mcharmapmodule.c
docs/: Makefile.in
docs/reference/: Makefile.am  Makefile.in  mcharmap-docs.sgml  mcharmap-sections.txt  mcharmap.types
docs/reference/html/: McharmapBlockChaptersModel.html  McharmapCodepointList.html  McharmapScriptChaptersModel.html  ch01.html  index.html  index.sgml  mcharmap-mcharmap-chapters-model.html  mcharmap-mcharmap-chapters-view.html  mcharmap-mcharmap-charmap.html  mcharmap-mcharmap-chartable.html  mcharmap-mcharmap-script-codepoint-list.html  mcharmap-mcharmap-unicode-info.html  mcharmap.devhelp2
docs/reference/tmpl/: mcharmap-block-chapters-model.sgml  mcharmap-block-codepoint-list.sgml  mcharmap-chapters-model.sgml  mcharmap-chapters-view.sgml  mcharmap-charmap.sgml  mcharmap-chartable.sgml  mcharmap-codepoint-list.sgml  mcharmap-script-chapters-model.sgml  mcharmap-script-codepoint-list.sgml  mcharmap-unicode-info.sgml  mcharmap-unused.sgml  mcharmap.sgml
help/: Makefile.am  Makefile.in  mcharmap.pot
help/C/: mcharmap.xml
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/fi/: fi.po
help/fr/: fr.po
help/it/: Makefile.am  Makefile.in  mcharmap-it.omf  mcharmap.xml
help/ja/: Makefile.am  Makefile.in  mcharmap-ja.omf  mcharmap.xml
help/ko/: ko.po
help/oc/: oc.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sv/: sv.po
help/vi/: vi.po
help/zh_CN/: zh_CN.po
help/zh_HK/: Makefile.am  Makefile.in  mcharmap-zh_HK.omf  mcharmap.xml
help/zh_TW/: Makefile.am  Makefile.in  mcharmap-zh_TW.omf  mcharmap.xml
mcharmap/: Makefile.am  Makefile.in  main.c  mcharmap-block-chapters-model.c  mcharmap-block-chapters-model.h  mcharmap-block-codepoint-list.c  mcharmap-block-codepoint-list.h  mcharmap-chapters-model.c  mcharmap-chapters-model.h  mcharmap-chapters-view.c  mcharmap-chapters-view.h  mcharmap-charmap.c  mcharmap-charmap.h  mcharmap-chartable-accessible.c  mcharmap-chartable-accessible.h  mcharmap-chartable-cell-accessible.c  mcharmap-chartable-cell-accessible.h  mcharmap-chartable.c  mcharmap-chartable.h  mcharmap-codepoint-list.c  mcharmap-codepoint-list.h  mcharmap-init.c  mcharmap-mini-fontsel.c  mcharmap-mini-fontsel.h  mcharmap-print-operation.c  mcharmap-print-operation.h  mcharmap-private.h  mcharmap-script-chapters-model.c  mcharmap-script-chapters-model.h  mcharmap-script-codepoint-list.c  mcharmap-script-codepoint-list.h  mcharmap-search-dialog.c  mcharmap-search-dialog.h  mcharmap-settings.c  mcharmap-settings.h  mcharmap-type-builtins.c.template  mcharmap-type-builtins.h.template  mcharmap-unicode-info.c  mcharmap-unicode-info.h  mcharmap-window.c  (+5 more)
pixmaps/: Makefile.am  Makefile.in
po/: POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  (+47 more)
